fix(readonly): make readonly state readable on mobile devices

--- a/src/components/input-field/partial-styles/_readonly.scss
+++ b/src/components/input-field/partial-styles/_readonly.scss
@@ -39,3 +39,13 @@
         }
     }
 }
+
+:host(.lime-text-field--readonly),
+:host([readonly]) {
+    .mdc-text-field--disabled .mdc-text-field__input,
+    .mdc-text-field__input[readonly] {
+        opacity: 1;
+        color: shared_input-select-picker.$input-text-color;
+        -webkit-text-fill-color: shared_input-select-picker.$input-text-color;
+    }
+}
